different voices added, some customization and keybord shortcuts updated

--- a/index.html
+++ b/index.html
@@ -353,9 +353,11 @@
                                 </button>
                                 <input type="file" id="txtFileInput" accept=".txt" multiple style="display:none" />
                                 <!-- Voice mode button for mobile - positioned between attach and model select -->
-                                <button class="voice-mode-btn mobile-voice-btn" id="voiceModeBtnMobile" title="Voice mode" style="display: none;">
+                                <button class="voice-mode-btn mobile-voice-btn" id="voiceModeBtnMobile"
+                                    title="Voice mode" style="display: none;">
                                     <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-                                        <path d="M7.33496 15.5V4.5C7.33496 4.13275 7.63275 3.83499 8 3.83496C8.36727 3.83496 8.66504 4.13273 8.66504 4.5V15.5C8.66504 15.8673 8.36727 16.165 8 16.165C7.63275 16.165 7.33496 15.8673 7.33496 15.5ZM11.335 13.1309V7.20801C11.335 6.84075 11.6327 6.54298 12 6.54297C12.3673 6.54297 12.665 6.84074 12.665 7.20801V13.1309C12.665 13.4981 12.3672 13.7959 12 13.7959C11.6328 13.7959 11.335 13.4981 11.335 13.1309ZM3.33496 11.3535V8.81543C3.33496 8.44816 3.63273 8.15039 4 8.15039C4.36727 8.15039 4.66504 8.44816 4.66504 8.81543V11.3535C4.66504 11.7208 4.36727 12.0186 4 12.0186C3.63273 12.0186 3.33496 11.7208 3.33496 11.3535ZM15.335 11.3535V8.81543C15.335 8.44816 15.6327 8.15039 16 8.15039C16.3673 8.15039 16.665 8.44816 16.665 8.81543V11.3535C16.665 11.7208 16.3673 12.0186 16 12.0186C15.6327 12.0186 15.335 11.7208 15.335 11.3535Z"/>
+                                        <path
+                                            d="M7.33496 15.5V4.5C7.33496 4.13275 7.63275 3.83499 8 3.83496C8.36727 3.83496 8.66504 4.13273 8.66504 4.5V15.5C8.66504 15.8673 8.36727 16.165 8 16.165C7.63275 16.165 7.33496 15.8673 7.33496 15.5ZM11.335 13.1309V7.20801C11.335 6.84075 11.6327 6.54298 12 6.54297C12.3673 6.54297 12.665 6.84074 12.665 7.20801V13.1309C12.665 13.4981 12.3672 13.7959 12 13.7959C11.6328 13.7959 11.335 13.4981 11.335 13.1309ZM3.33496 11.3535V8.81543C3.33496 8.44816 3.63273 8.15039 4 8.15039C4.36727 8.15039 4.66504 8.44816 4.66504 8.81543V11.3535C4.66504 11.7208 4.36727 12.0186 4 12.0186C3.63273 12.0186 3.33496 11.7208 3.33496 11.3535ZM15.335 11.3535V8.81543C15.335 8.44816 15.6327 8.15039 16 8.15039C16.3673 8.15039 16.665 8.44816 16.665 8.81543V11.3535C16.665 11.7208 16.3673 12.0186 16 12.0186C15.6327 12.0186 15.335 11.7208 15.335 11.3535Z" />
                                     </svg>
                                 </button>
                             </div>
@@ -372,9 +374,11 @@
                                     <i class="fas fa-microphone"></i>
                                 </button>
                                 <!-- Voice mode button for desktop - positioned after mic button -->
-                                <button class="voice-mode-btn desktop-voice-btn" id="voiceModeBtnDesktop" title="Voice mode">
+                                <button class="voice-mode-btn desktop-voice-btn" id="voiceModeBtnDesktop"
+                                    title="Voice mode">
                                     <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-                                        <path d="M7.33496 15.5V4.5C7.33496 4.13275 7.63275 3.83499 8 3.83496C8.36727 3.83496 8.66504 4.13273 8.66504 4.5V15.5C8.66504 15.8673 8.36727 16.165 8 16.165C7.63275 16.165 7.33496 15.8673 7.33496 15.5ZM11.335 13.1309V7.20801C11.335 6.84075 11.6327 6.54298 12 6.54297C12.3673 6.54297 12.665 6.84074 12.665 7.20801V13.1309C12.665 13.4981 12.3672 13.7959 12 13.7959C11.6328 13.7959 11.335 13.4981 11.335 13.1309ZM3.33496 11.3535V8.81543C3.33496 8.44816 3.63273 8.15039 4 8.15039C4.36727 8.15039 4.66504 8.44816 4.66504 8.81543V11.3535C4.66504 11.7208 4.36727 12.0186 4 12.0186C3.63273 12.0186 3.33496 11.7208 3.33496 11.3535ZM15.335 11.3535V8.81543C15.335 8.44816 15.6327 8.15039 16 8.15039C16.3673 8.15039 16.665 8.44816 16.665 8.81543V11.3535C16.665 11.7208 16.3673 12.0186 16 12.0186C15.6327 12.0186 15.335 11.7208 15.335 11.3535Z"/>
+                                        <path
+                                            d="M7.33496 15.5V4.5C7.33496 4.13275 7.63275 3.83499 8 3.83496C8.36727 3.83496 8.66504 4.13273 8.66504 4.5V15.5C8.66504 15.8673 8.36727 16.165 8 16.165C7.63275 16.165 7.33496 15.8673 7.33496 15.5ZM11.335 13.1309V7.20801C11.335 6.84075 11.6327 6.54298 12 6.54297C12.3673 6.54297 12.665 6.84074 12.665 7.20801V13.1309C12.665 13.4981 12.3672 13.7959 12 13.7959C11.6328 13.7959 11.335 13.4981 11.335 13.1309ZM3.33496 11.3535V8.81543C3.33496 8.44816 3.63273 8.15039 4 8.15039C4.36727 8.15039 4.66504 8.44816 4.66504 8.81543V11.3535C4.66504 11.7208 4.36727 12.0186 4 12.0186C3.63273 12.0186 3.33496 11.7208 3.33496 11.3535ZM15.335 11.3535V8.81543C15.335 8.44816 15.6327 8.15039 16 8.15039C16.3673 8.15039 16.665 8.44816 16.665 8.81543V11.3535C16.665 11.7208 16.3673 12.0186 16 12.0186C15.6327 12.0186 15.335 11.7208 15.335 11.3535Z" />
                                     </svg>
                                 </button>
                             </div>
@@ -888,6 +892,66 @@
                     </div>
                 </div>
             </div>
+
+            <div class="form-section">
+                <h3>🎤 Voice Agent Configuration</h3>
+                <div class="form-row">
+                    <div class="form-col voice-model-col">
+                        <label>Voice Model</label>
+                        <select class="form-control" id="voiceModelSetting">
+                            <option value="">🔄 Loading voices...</option>
+                        </select>
+                    </div>
+                    <div class="form-col">
+                        <label>Test Voice</label>
+                        <button type="button" class="btn btn-secondary" id="testVoiceBtn"
+                            style="width: 100%; margin-top: 0;">
+                            <i class="fas fa-play"></i> Preview Voice
+                        </button>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-col">
+                        <label>Speech Rate</label>
+                        <div class="slider-group">
+                            <div class="slider-label">
+                                <span>Speed</span>
+                                <span id="voiceRateValue">1.0x</span>
+                            </div>
+                            <input type="range" class="slider" id="voiceRateSlider" min="0.5" max="2.0" step="0.1"
+                                value="1.0">
+                        </div>
+                    </div>
+                    <div class="form-col">
+                        <label>Voice Pitch</label>
+                        <div class="slider-group">
+                            <div class="slider-label">
+                                <span>Pitch</span>
+                                <span id="voicePitchValue">1.0x</span>
+                            </div>
+                            <input type="range" class="slider" id="voicePitchSlider" min="0.5" max="2.0" step="0.1"
+                                value="1.0">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-col">
+                        <label>Voice Volume</label>
+                        <div class="slider-group">
+                            <div class="slider-label">
+                                <span>Volume</span>
+                                <span id="voiceVolumeValue">100%</span>
+                            </div>
+                            <input type="range" class="slider" id="voiceVolumeSlider" min="0.1" max="1.0" step="0.1"
+                                value="1.0">
+                        </div>
+                    </div>
+                    <div class="form-col">
+                        <div style="display: flex; align-items: end; height: 100%;">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </template>
 
         <!-- Settings Appearance Tab Template -->
@@ -985,34 +1049,73 @@
     <template id="settingsAccessibilityTemplate">
         <div class="form-section">
             <h3>Keyboard Shortcuts</h3>
+            <div class="mobile-shortcuts-message">
+                <p>Accessibility will be available in future updates.</p>
+            </div>
             <div class="keyboard-shortcuts-container">
+                <div class="shortcut-item">
+                    <div class="shortcut-description">Show Shortcuts</div>
+                    <div class="shortcut-keys">
+                        <kbd>Ctrl/Cmd</kbd> + <kbd>/</kbd>
+                    </div>
+                </div>
                 <div class="shortcut-item">
                     <div class="shortcut-description">Open New Chat</div>
                     <div class="shortcut-keys">
-                        <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>O</kbd>
+                        <kbd>Ctrl/Cmd</kbd> + <kbd>Shift</kbd> + <kbd>O</kbd>
                     </div>
                 </div>
 
                 <div class="shortcut-item">
                     <div class="shortcut-description">Toggle Sidebar</div>
                     <div class="shortcut-keys">
-                        <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>S</kbd>
+                        <kbd>Ctrl/Cmd</kbd> + <kbd>Shift</kbd> + <kbd>S</kbd>
                     </div>
                 </div>
 
                 <div class="shortcut-item">
                     <div class="shortcut-description">Delete Chat</div>
                     <div class="shortcut-keys">
-                        <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>⌫</kbd>
+                        <kbd>Ctrl/Cmd</kbd> + <kbd>Shift</kbd> + <kbd>⌫</kbd>
+                    </div>
+                </div>
+
+
+                <div class="shortcut-item">
+                    <div class="shortcut-description">Focus Conversation Search</div>
+                    <div class="shortcut-keys">
+                        <kbd>Ctrl/Cmd</kbd> + <kbd>K</kbd>
                     </div>
                 </div>
 
                 <div class="shortcut-item">
-                    <div class="shortcut-description">Show Shortcuts</div>
+                    <div class="shortcut-description">Attach File</div>
                     <div class="shortcut-keys">
-                        <kbd>Ctrl</kbd> + <kbd>/</kbd>
+                        <kbd>Ctrl/Cmd</kbd> + <kbd>Shift</kbd> + <kbd>A</kbd>
                     </div>
                 </div>
+
+                <div class="shortcut-item">
+                    <div class="shortcut-description">AI Model Selection</div>
+                    <div class="shortcut-keys">
+                        <kbd>Ctrl/Cmd</kbd> + <kbd>Shift</kbd> + <kbd>M</kbd>
+                    </div>
+                </div>
+
+                <div class="shortcut-item">
+                    <div class="shortcut-description">Voice Input</div>
+                    <div class="shortcut-keys">
+                        <kbd>Ctrl/Cmd</kbd> + <kbd>Shift</kbd> + <kbd>V</kbd>
+                    </div>
+                </div>
+
+                <div class="shortcut-item">
+                    <div class="shortcut-description">Voice Mode</div>
+                    <div class="shortcut-keys">
+                        <kbd>Ctrl/Cmd</kbd> + <kbd>Shift</kbd> + <kbd>B</kbd>
+                    </div>
+                </div>
+
             </div>
         </div>
     </template>
