--- a/index.html
+++ b/index.html
@@ -349,7 +349,10 @@
                         <div class="input-actions">
                             <div class="input-actions-left">
                                 <button class="attachment-btn" id="attachmentBtn" title="Attach file">
-                                    <i class="fas fa-paperclip"></i>
+                                    <svg class="paperclip-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <path class="extra-line" d="M13.234 20.252 21 12.3"/>
+                                        <path class="main-path" d="m16 6-8.414 8.586a2 2 0 0 0 0 2.828 2 2 0 0 0 2.828 0l8.414-8.586a4 4 0 0 0 0-5.656 4 4 0 0 0-5.656 0l-8.415 8.585a6 6 0 1 0 8.486 8.486"/>
+                                    </svg>
                                 </button>
                                 <input type="file" id="txtFileInput" accept=".txt" multiple style="display:none" />
                                 <!-- Voice mode button for mobile - positioned between attach and model select -->
