Update(SEO - Tags) : updated tags on different pages

--- a/index.html
+++ b/index.html
@@ -79,7 +79,17 @@
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-MZSJ5XNX');
     </script>
-    <!-- End Google Tag Manager -->
+    <!-- End Google Tag Manager -->
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3D2G0PC62C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-3D2G0PC62C');
+    </script>
+    <!-- End Google Analytics 4 -->
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
