lenis scroll add to about page and hybrid api approach retrieve

--- a/about.html
+++ b/about.html
@@ -39,6 +39,8 @@
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="smooth-cursor.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.19/bundled/lenis.min.js"></script>
 
     <!-- Google Adsense -->
     <meta name="google-adsense-account" content="ca-pub-1178405148130113">
@@ -185,7 +187,7 @@
     <!-- Main Content -->
     <div class="about-container">
         <!-- Hero Section -->
-        <section class="hero-section">
+        <section class="hero-section ">
             <h1>About SATI ChatBot</h1>
             <p>Your intelligent assistant for Samrat Ashok Technological Institute resources and information, powered by
                 advanced AI technology.</p>
@@ -794,7 +796,6 @@
 
     <script src="script.js"></script>
     <script src="about.js"></script>
-
 
     <!-- Smooth Cursor Script -->
     <script src="smooth-cursor.js"></script>
