gsap lenis scrolling added to some more pages

--- a/about.html
+++ b/about.html
@@ -797,6 +797,44 @@
     <script src="script.js"></script>
     <script src="about.js"></script>
 
+    <!-- Smooth Scroll with Lenis and ScrollTrigger -->
+    <script>
+        // Initialize Lenis smooth scroll
+        const lenis = new Lenis({
+            duration: 1.2,
+            easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+        });
+
+        // Register ScrollTrigger plugin
+        gsap.registerPlugin(ScrollTrigger);
+
+        // Animation loop
+        function raf(time) {
+            lenis.raf(time);
+            ScrollTrigger.update();
+            requestAnimationFrame(raf);
+        }
+
+        requestAnimationFrame(raf);
+
+        // Pin animation
+        const section1 = document.body.querySelector('.section-1');
+        const box = document.body.querySelector('.box');
+
+        if (section1 && box) {
+            const tl = gsap.timeline({ paused: true });
+            tl.fromTo(box, { y: 0 }, { y: '100vh', duration: 1, ease: 'none' }, 0);
+
+            const st = ScrollTrigger.create({
+                animation: tl,
+                trigger: section1,
+                start: 'top top',
+                end: 'bottom top',
+                scrub: true
+            });
+        }
+    </script>
+
     <!-- Smooth Cursor Script -->
     <script src="smooth-cursor.js"></script>
 </body>
