--- a/index.html
+++ b/index.html
@@ -83,11 +83,17 @@
 
     <!-- Google Analytics 4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3D2G0PC62C"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7T9E17KXYQ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
+        
+        // Original Google Analytics tag
         gtag('config', 'G-3D2G0PC62C');
+        
+        // SATI Business Account Google Analytics tag
+        gtag('config', 'G-7T9E17KXYQ');
     </script>
     <!-- End Google Analytics 4 -->
 
