Fix AdSense approval issues: Update Vercel config for ads.txt, enhance privacy policy with AdSense section, add footer with policy links

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -491,12 +491,46 @@
                     <li><strong>Analytics:</strong> Google Analytics for usage statistics</li>
                     <li><strong>Hosting:</strong> Vercel for website hosting</li>
                     <li><strong>CDN Services:</strong> For faster content delivery</li>
+                    <li><strong>Advertising:</strong> Google AdSense for displaying relevant advertisements</li>
                 </ul>
                 <p>We encourage you to review the privacy policies of these third-party services.</p>
             </div>
 
             <div class="privacy-section">
-                <h2>5. Cookies and Local Storage</h2>
+                <h2>5. Advertising and Google AdSense</h2>
+                <p>SATI ChatBot uses Google AdSense to display advertisements. Here's what you need to know:</p>
+                
+                <h3>5.1 How AdSense Works</h3>
+                <ul>
+                    <li>Google AdSense may use cookies and web beacons to serve ads based on your visits to this site and other sites on the Internet</li>
+                    <li>These cookies enable Google to serve ads to you based on your visit to our site and other sites on the Internet</li>
+                    <li>You may opt out of personalized advertising by visiting <a href="https://www.google.com/settings/ads" target="_blank" style="color: var(--primary-color);">Google Ads Settings</a></li>
+                </ul>
+
+                <h3>5.2 Third-Party Ad Vendors</h3>
+                <ul>
+                    <li>Third-party vendors, including Google, use cookies to serve ads based on a user's prior visits to our website</li>
+                    <li>Google's use of advertising cookies enables it and its partners to serve ads to our users based on their visit to our site and/or other sites on the Internet</li>
+                    <li>Users may opt out of personalized advertising by visiting <a href="https://www.google.com/settings/ads" target="_blank" style="color: var(--primary-color);">Google Ads Settings</a></li>
+                </ul>
+
+                <h3>5.3 Data Collection by AdSense</h3>
+                <ul>
+                    <li>Google AdSense may collect information about your visits to this website and other websites to provide advertisements about goods and services of interest to you</li>
+                    <li>This information may include your IP address, browser type, operating system, and browsing behavior</li>
+                    <li>No personally identifiable information is shared with advertisers without your explicit consent</li>
+                </ul>
+
+                <h3>5.4 Your Choices</h3>
+                <ul>
+                    <li>You can control ad personalization through <a href="https://adssettings.google.com/" target="_blank" style="color: var(--primary-color);">Google Ad Settings</a></li>
+                    <li>You can opt out of interest-based advertising through the <a href="http://www.aboutads.info/choices/" target="_blank" style="color: var(--primary-color);">Digital Advertising Alliance</a></li>
+                    <li>You can disable cookies in your browser settings, though this may affect website functionality</li>
+                </ul>
+            </div>
+
+            <div class="privacy-section">
+                <h2>6. Cookies and Local Storage</h2>
                 <p>We use cookies and local storage to:</p>
                 <ul>
                     <li>Remember your theme preferences (dark/light mode)</li>
@@ -509,7 +543,7 @@
             </div>
 
             <div class="privacy-section">
-                <h2>6. Your Rights and Choices</h2>
+                <h2>7. Your Rights and Choices</h2>
                 <p>You have the following rights regarding your personal information:</p>
                 <ul>
                     <li><strong>Access:</strong> Request information about data we have about you</li>
@@ -522,14 +556,14 @@
             </div>
 
             <div class="privacy-section">
-                <h2>7. Children's Privacy</h2>
+                <h2>8. Children's Privacy</h2>
                 <p>SATI ChatBot is intended for users who are at least 13 years old. We do not knowingly collect
                     personal information from children under 13. If we become aware that we have collected personal
                     information from a child under 13, we will take steps to delete such information.</p>
             </div>
 
             <div class="privacy-section">
-                <h2>8. Changes to This Privacy Policy</h2>
+                <h2>9. Changes to This Privacy Policy</h2>
                 <p>We may update this Privacy Policy from time to time. When we do, we will:</p>
                 <ul>
                     <li>Post the updated policy on this page</li>
@@ -541,7 +575,7 @@
             </div>
 
             <div class="privacy-section">
-                <h2>9. Contact Information</h2>
+                <h2>10. Contact Information</h2>
                 <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our data practices,
                     please contact us:</p>
                 <ul>
