Team Name changed and some updates

--- a/404.html
+++ b/404.html
@@ -12,8 +12,8 @@
     <meta name="title" content="404 - Page Not Found | SATI ChatBot">
     <meta name="description"
         content="Oops! The page you're looking for doesn't exist. Return to SATI ChatBot homepage or explore our resources about Samrat Ashok Technological Institute.">
-    <meta name="keywords" content="404 error, page not found, SATI ChatBot, error page, Team FluxoNauts">
-    <meta name="author" content="Team FluxoNauts">
+    <meta name="keywords" content="404 error, page not found, SATI ChatBot, error page, Team NeoCoders">
+    <meta name="author" content="Team NeoCoders">
     <meta name="robots" content="noindex, follow">
 
     <!-- Open Graph / Facebook -->
@@ -594,7 +594,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team FluxNauts.</p>
+            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team NeoCoders.</p>
         </div>
     </footer>
 
