--- a/about.html
+++ b/about.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About SATI ChatBot - AI Assistant for Engineering Students | Team FluxoNauts</title>
+    <title>About SATI ChatBot - AI Assistant for Engineering Students | Team NeoCoders</title>
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
     <link rel="canonical" href="https://sati-chatbot.vercel.app/about.html">
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="About SATI ChatBot - AI Assistant for Engineering Students">
     <meta name="description"
-        content="Learn about SATI ChatBot - An innovative AI assistant created by Team FluxoNauts to help students and parents get comprehensive information about Samrat Ashok Technological Institute, Vidisha.">
+        content="Learn about SATI ChatBot - An innovative AI assistant created by Team NeoCoders to help students and parents get comprehensive information about Samrat Ashok Technological Institute, Vidisha.">
     <meta name="keywords"
-        content="About SATI-ChatBot, Team FluxoNauts, AI assistant development, SATI information system, engineering college chatbot, student helper AI, educational technology, Samrat Ashok Technological Institute assistant">
-    <meta name="author" content="Team FluxoNauts">
+        content="About SATI-ChatBot, Team NeoCoders, AI assistant development, SATI information system, engineering college chatbot, student helper AI, educational technology, Samrat Ashok Technological Institute assistant">
+    <meta name="author" content="Team NeoCoders">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://sati-chatbot.vercel.app/about.html">
     <meta property="og:title" content="About SATI ChatBot - AI Assistant for Engineering Students">
     <meta property="og:description"
-        content="Learn about SATI ChatBot - An innovative AI assistant created by Team FluxoNauts to help students get comprehensive information about SATI Vidisha.">
+        content="Learn about SATI ChatBot - An innovative AI assistant created by Team NeoCoders to help students get comprehensive information about SATI Vidisha.">
     <meta property="og:image" content="https://sati-chatbot.vercel.app/images/preview.png">
     <meta property="og:site_name" content="SATI ChatBot">
 
@@ -31,7 +31,7 @@
     <meta name="twitter:url" content="https://sati-chatbot.vercel.app/about.html">
     <meta name="twitter:title" content="About SATI ChatBot - AI Assistant for Engineering Students">
     <meta name="twitter:description"
-        content="Learn about SATI ChatBot - An innovative AI assistant created by Team FluxoNauts.">
+        content="Learn about SATI ChatBot - An innovative AI assistant created by Team NeoCoders.">
     <meta name="twitter:image" content="https://sati-chatbot.vercel.app/images/preview.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -559,7 +559,7 @@
         <!-- Team Section -->
         <section class="team-section">
             <div class="team-header">
-                <h2><i class="fas fa-users"></i> Meet Team FluxoNauts</h2>
+                <h2><i class="fas fa-users"></i> Meet Team NeoCoders</h2>
                 <p>Passionate developers creating innovative solutions for SATI students</p>
                 <div class="tech-stack">
                     <span><i class="fab fa-html5"></i> Frontend</span>
@@ -773,7 +773,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team FluxoNauts.</p>
+            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team NeoCoders.</p>
         </div>
     </footer>
 
