--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- Primary Meta Tags -->
     <meta name="title" content="SATI ChatBot - Your Institute Guide">
     <meta name="description"
-        content="Get instant answers about SATI Vidisha - admissions, courses, placements, hostel facilities, and more. Your intelligent AI assistant for Samrat Ashok Technological Institute information.">
+        content="Get instant answers about SATI Vidisha - admissions, courses & more. Your AI assistant for institute information.">
     <meta name="keywords"
         content="SATI ChatBot, SATI Vidisha, Samrat Ashok Technological Institute, AI chatbot, SATI admissions, SATI courses, SATI placements, engineering college Vidisha, Madhya Pradesh engineering, SATI hostel, SATI facilities, college information assistant">
-    <meta name="author" content="Team FluxoNauts">
+    <meta name="author" content="Team NeoCoders">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="language" content="English">
     <meta name="revisit-after" content="1 days">
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://sati-chatbot.vercel.app/">
     <meta property="og:title" content="SATI ChatBot - Your Institute Guide">
     <meta property="og:description"
-        content="Get instant answers about SATI Vidisha - admissions, courses, placements, hostel facilities, and more. Your intelligent AI assistant for Samrat Ashok Technological Institute.">
+        content="Get instant answers about SATI Vidisha - admissions, courses & more. Your AI assistant for institute information.">
     <meta property="og:image" content="https://sati-chatbot.vercel.app/images/preview.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -36,7 +36,7 @@
     <meta name="twitter:url" content="https://sati-chatbot.vercel.app/">
     <meta name="twitter:title" content="SATI ChatBot - Your Institute Guide">
     <meta name="twitter:description"
-        content="Get instant answers about SATI Vidisha - admissions, courses, placements, hostel facilities, and more.">
+        content="Get instant answers about SATI Vidisha - admissions, courses & more. Your AI assistant for institute information.">
     <meta name="twitter:image" content="https://sati-chatbot.vercel.app/images/preview.png">
 
     <!-- Additional SEO Meta Tags -->
@@ -139,7 +139,7 @@
         "@type": "WebApplication",
         "name": "SATI ChatBot",
         "alternateName": "SATI AI Assistant",
-        "description": "AI-powered chatbot providing comprehensive information about Samrat Ashok Technological Institute (SATI), Vidisha. Get instant answers about admissions, courses, placements, facilities, and more.",
+        "description": "AI-powered chatbot providing comprehensive information about Samrat Ashok Technological Institute (SATI), Vidisha. Get instant answers about admissions, courses and more.",
         "url": "https://sati-chatbot.vercel.app/",
         "applicationCategory": "EducationalApplication",
         "operatingSystem": "Web Browser",
@@ -150,7 +150,7 @@
         },
         "creator": {
             "@type": "Organization",
-            "name": "Team FluxoNauts"
+            "name": "Team NeoCoders"
         },
         "about": {
             "@type": "EducationalOrganization",
