--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,8 +13,8 @@
     <meta name="description"
         content="Learn about SATI ChatBot's privacy policy, data protection measures, and how we handle user information. Your privacy is our priority.">
     <meta name="keywords"
-        content="SATI ChatBot privacy policy, data protection, user privacy, information security, Team FluxoNauts privacy, AI chatbot privacy">
-    <meta name="author" content="Team FluxoNauts">
+        content="SATI ChatBot privacy policy, data protection, user privacy, information security, Team NeoCoders privacy, AI chatbot privacy">
+    <meta name="author" content="Team NeoCoders">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
@@ -579,7 +579,7 @@
                 <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our data practices,
                     please contact us:</p>
                 <ul>
-                    <li><strong>Team:</strong> Team FluxoNauts</li>
+                    <li><strong>Team:</strong> Team NeoCoders</li>
                     <li><strong>Website:</strong> <a href="https://sati-chatbot.vercel.app/contact.html"
                             style="color: var(--primary-color);">Contact Us Page</a></li>
                     <li><strong>Email:</strong> Through our contact form</li>
@@ -639,7 +639,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team FluxNauts.</p>
+            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team NeoCoders.</p>
         </div>
     </footer>
 
