--- a/resources.html
+++ b/resources.html
@@ -14,7 +14,7 @@
         content="Access comprehensive SATI resources including study materials, syllabus, academic calendar, placement information, hostel details, and more. Your one-stop resource hub for Samrat Ashok Technological Institute.">
     <meta name="keywords"
         content="SATI resources, SATI study materials, SATI syllabus, SATI academic calendar, SATI placement information, SATI hostel details, engineering resources Vidisha, SATI student resources, academic information SATI">
-    <meta name="author" content="Team FluxoNauts">
+    <meta name="author" content="Team NeoCoders">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
@@ -388,7 +388,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team FluxNauts.</p>
+            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team NeoCoders.</p>
         </div>
     </footer>
 
