--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -13,8 +13,8 @@
     <meta name="description"
         content="Read SATI ChatBot's terms of service, user agreement, and usage guidelines. Understand your rights and responsibilities when using our AI assistant.">
     <meta name="keywords"
-        content="SATI ChatBot terms of service, user agreement, usage guidelines, terms and conditions, Team FluxoNauts terms, AI chatbot rules">
-    <meta name="author" content="Team FluxoNauts">
+        content="SATI ChatBot terms of service, user agreement, usage guidelines, terms and conditions, Team NeoCoders terms, AI chatbot rules">
+    <meta name="author" content="Team NeoCoders">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
@@ -505,7 +505,7 @@
 
                 <h3>4.1 Our Content</h3>
                 <p>The Service and its original content, features, and functionality are and will remain the exclusive
-                    property of Team FluxoNauts and its licensors. The Service is protected by copyright, trademark, and
+                    property of Team NeoCoders and its licensors. The Service is protected by copyright, trademark, and
                     other laws.</p>
 
                 <h3>4.2 User Content</h3>
@@ -544,7 +544,7 @@
 
             <div class="terms-section">
                 <h2>6. Limitation of Liability</h2>
-                <p>In no event shall Team FluxoNauts, nor its directors, employees, partners, agents, suppliers, or
+                <p>In no event shall Team NeoCoders, nor its directors, employees, partners, agents, suppliers, or
                     affiliates, be liable for any indirect, incidental, special, consequential, or punitive damages,
                     including without limitation, loss of profits, data, use, goodwill, or other intangible losses,
                     resulting from your use of the Service.</p>
@@ -589,7 +589,7 @@
                 <h2>11. Contact Information</h2>
                 <p>If you have any questions about these Terms of Service, please contact us:</p>
                 <ul>
-                    <li><strong>Team:</strong> Team FluxoNauts</li>
+                    <li><strong>Team:</strong> Team NeoCoders</li>
                     <li><strong>Website:</strong> <a href="https://sati-chatbot.vercel.app/contact.html"
                             style="color: var(--primary-color);">Contact Us Page</a></li>
                     <li><strong>Email:</strong> Through our contact form</li>
@@ -607,7 +607,7 @@
             <div class="terms-section">
                 <h2>13. Entire Agreement</h2>
                 <p>These Terms of Service, together with our Privacy Policy, constitute the sole and entire agreement
-                    between you and Team FluxoNauts regarding the Service and supersede all prior and contemporaneous
+                    between you and Team NeoCoders regarding the Service and supersede all prior and contemporaneous
                     understandings, agreements, representations, and warranties.</p>
             </div>
 
@@ -653,7 +653,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team FluxNauts.</p>
+            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team NeoCoders.</p>
         </div>
     </footer>
 
