--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact SATI ChatBot Team - Support & Feedback | Team FluxoNauts</title>
+    <title>Contact SATI ChatBot Team - Support & Feedback | Team NeoCoders</title>
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
     <link rel="canonical" href="https://sati-chatbot.vercel.app/contact.html">
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="Contact SATI ChatBot Team - Support & Feedback">
     <meta name="description"
-        content="Get in touch with SATI ChatBot team by Team FluxoNauts. Contact us for support, feedback, feature requests, or inquiries about our AI-powered educational assistant for SATI students.">
+        content="Get in touch with SATI ChatBot team by Team NeoCoders. Contact us for support, feedback, feature requests, or inquiries about our AI-powered educational assistant for SATI students.">
     <meta name="keywords"
-        content="Contact SATI ChatBot, Team FluxoNauts contact, SATI ChatBot support, AI chatbot feedback, educational assistant support, SATI student help, technical support, feature requests">
-    <meta name="author" content="Team FluxoNauts">
+        content="Contact SATI ChatBot, Team NeoCoders contact, SATI ChatBot support, AI chatbot feedback, educational assistant support, SATI student help, technical support, feature requests">
+    <meta name="author" content="Team NeoCoders">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://sati-chatbot.vercel.app/contact.html">
     <meta property="og:title" content="Contact SATI ChatBot Team - Support & Feedback">
     <meta property="og:description"
-        content="Get in touch with SATI ChatBot team by Team FluxoNauts. Contact us for support, feedback, or inquiries about our AI-powered educational assistant.">
+        content="Get in touch with SATI ChatBot team by Team NeoCoders. Contact us for support, feedback, or inquiries about our AI-powered educational assistant.">
     <meta property="og:image" content="https://sati-chatbot.vercel.app/images/preview.png">
     <meta property="og:site_name" content="SATI ChatBot">
 
@@ -198,7 +198,7 @@
         <!-- Hero Section -->
         <section class="hero-section">
             <h1>Contact Us</h1>
-            <p>Have questions, feedback, or need support? We're here to help! Reach out to Team FluxoNauts.</p>
+            <p>Have questions, feedback, or need support? We're here to help! Reach out to Team NeoCoders.</p>
         </section>
 
         <!-- Contact Grid -->
@@ -420,7 +420,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team FluxoNauts.</p>
+            <p>&copy; 2025 SATI ChatBot. Made with ❤️ by Team NeoCoders.</p>
         </div>
     </footer>
 
