json issue fixed

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
         "isAccessibleForFree": true,
         "browserRequirements": "Requires JavaScript. Requires HTML5.",
         "softwareVersion": "1.0",
-        "datePublished": "2024-07-18",
-        "dateModified": "2025-08-04",
+        "datePublished": "2025-07-18",
+        "dateModified": "2025-08-04"
     }
     </script>
 
